k8s/persist/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: persist
  namespace: dynatrace-demo
  labels:
    app: persist
spec:
  replicas: 3
  selector:
    matchLabels:
      app: persist
  template:
    metadata:
      labels:
        app: persist
    spec:
      containers:
        - name: persist
          image: plfiorini/dynatrace-persist:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          # volumeMounts:
          #   - name: secret-volume
          #     mountPath: /etc/secrets
          #     readOnly: true
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      # volumes:
      #   - name: secret-volume
      #     secret:
      #       secretName: persist-secret
      restartPolicy: Always
