k8s/persist/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: persist
  namespace: dynatrace-demo
  labels:
    app: persist
spec:
  selector:
    app: persist
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  type: ClusterIP
