k8s/persist/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: persist-ingress
  namespace: dynatrace-demo
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: persist
            port:
              number: 8080
